discussion/kv_engine/185522/185522_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54776: Merge commit '4b020c3d4' into 7.1.4

Bugfix previously included in 6.6.6; also to be included in 7.1.4:

* commit '4b020c3d4':
  MB-54776: Don't return $XTOC=null

Change-Id: I18c5a3002a5582c113d1b99841b56a0328dab0bb

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2023-01-27 14:31:20.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-27 14:31:41.000000000
Message: 
Patch Set 2: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/334692/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-27 15:42:26.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-714/36/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-714/kv_engine/tests/testapp/testapp_xattr.cc(2223): error C2664: "void TestappXattrClientTest::setBodyAndXattr(const std::string &,std::initializer_list<std::pair<const _Kty,_Ty>>)": cannot convert argument 1 from "MemcachedConnection" to "const std::string &" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-714/36/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-714/23/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/kv_engine/tests/testapp/testapp_xattr.cc:2223:5: error: no matching member function for call to "setBodyAndXattr" [clang-diagnostic-error]
    setBodyAndXattr(conn, value, {{sysXattr, xattrVal}});
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/kv_engine/tests/testapp/testapp_client_test.h:127:10: note: candidate function not viable: no known conversion from "MemcachedConnection" to "const std::string" (aka "const basic_string<char>") for 1st argument
    void setBodyAndXattr(
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/kv_engine/tests/testapp/testapp_client_test.h:140:10: note: candidate function not viable: requires 2 arguments, but 3 were provided
    void setBodyAndXattr(
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-714/23/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-714/kv_engine/tests/testapp/testapp_xattr.cc:2223:5:
error: no matching member function for call to "setBodyAndXattr" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-714/23/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/7.1.4/26/ : FAILURE

Compile error at [2023-01-27T15:41:37.721Z] /home/couchbase/jenkins/workspace/kv_engine.linux_7.1.4/kv_engine/tests/testapp/testapp_xattr.cc:2223:56:
error: no matching function for call to ?XattrTest_MB54776_Test::setBodyAndXattr(MemcachedConnection&, std::string&, <brace-enclosed initializer list>)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/7.1.4/26/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/7.1.4/24/ : FAILURE

Compile error at [2023-01-27T15:41:59.375Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_7.1.4/kv_engine/tests/testapp/testapp_xattr.cc:2223:56:
error: no matching function for call to ?XattrTest_MB54776_Test::setBodyAndXattr(MemcachedConnection&, std::string&, <brace-enclosed initializer list>)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/7.1.4/24/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/7.1.4/24/ : FAILURE

Compile error at [2023-01-27T15:33:07.656Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_7.1.4/kv_engine/tests/testapp/testapp_xattr.cc:2223:5:
error: no matching member function for call to "setBodyAndXattr"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/7.1.4/24/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/7.1.4/22/ : FAILURE

Compile error at [2023-01-27T15:06:51.731Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_7.1.4/kv_engine/tests/testapp/testapp_xattr.cc:2223:56:
error: no matching function for call to ?XattrTest_MB54776_Test::setBodyAndXattr(MemcachedConnection&, std::string&, <brace-enclosed initializer list>)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/7.1.4/22/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/7.1.4/55/ : FAILURE

Compile error at [2023-01-27T14:52:43.576Z] /Users/couchbase/workspace/workspace/kv_engine.macos_7.1.4/kv_engine/tests/testapp/testapp_xattr.cc:2223:5:
error: no matching member function for call to "setBodyAndXattr"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/7.1.4/55/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/7.1.4/25/ : FAILURE

Compile error at [2023-01-27T15:35:36.630Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_7.1.4/kv_engine/tests/testapp/testapp_xattr.cc:2223:5:
error: no matching member function for call to "setBodyAndXattr"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/7.1.4/25/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/7.1.4/37/ : FAILURE

Compile error at [2023-01-27T15:39:01.381Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_7.1.4/kv_engine/tests/testapp/testapp_xattr.cc:2223:5:
error: no matching member function for call to "setBodyAndXattr"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/7.1.4/37/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-714/23/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22415/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
